<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".DetailsTaskActivity">

    <ImageButton
        android:id="@+id/btClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/back_primary"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/color_blue"
        app:layout_constraintEnd_toEndOf="@+id/edNewTask"
        app:layout_constraintTop_toTopOf="@+id/btClose" />


    <EditText
        android:id="@+id/edNewTask"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/Hint_new_task"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btClose"

        />

    <TextView
        android:id="@+id/txImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Importance"
        android:layout_marginTop="20dp"
        android:textColor="@color/label_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edNewTask"
        app:layout_constraintTop_toBottomOf="@+id/edNewTask" />
    <TextView
        android:id="@+id/txImportanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/No"
        android:textColor="@color/label_secondary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txImportance"
        app:layout_constraintTop_toBottomOf="@+id/txImportance" />

    <View
        android:id="@+id/dividerImportance"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/edNewTask"
        app:layout_constraintStart_toStartOf="@+id/edNewTask"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txImportanceValue" />

    <TextView
        android:id="@+id/txDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Make_up"
        android:textColor="@color/label_primary"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edNewTask"
        app:layout_constraintTop_toBottomOf="@+id/dividerImportance" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txDate"
        app:layout_constraintEnd_toEndOf="@+id/edNewTask"
        app:layout_constraintTop_toTopOf="@+id/txDate" />
    <TextView
        android:id="@+id/txDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text=""
        android:textColor="@color/label_secondary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txDate"
        app:layout_constraintTop_toBottomOf="@+id/txDate" />

    <View
        android:id="@+id/dividerDate"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/edNewTask"
        app:layout_constraintStart_toStartOf="@+id/edNewTask"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txDateValue" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"


        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintStart_toStartOf="@+id/edNewTask"
        app:layout_constraintTop_toBottomOf="@+id/dividerDate" />

    <TextView
        android:id="@+id/txDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Delete"
        android:textColor="@color/label_secondary"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>