<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/myTasks"
        android:textColor="@color/label_primary"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txCompletedTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/performed"

        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/txTitle"
        app:layout_constraintTop_toTopOf="@id/txTitle" />
    <ImageView
        android:id="@+id/imgShowCompletedTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:backgroundTint="@color/color_blue"
        app:layout_constraintTop_toTopOf="@id/txCompletedTasks"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txCompletedTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/New"
            android:textSize="14sp"
            android:layout_marginStart="42dp"
            android:fontFamily="sans-serif-condensed-medium"
            />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>